Correction des contrastes

--- a/assets/style.css
+++ b/assets/style.css
@@ -20,7 +20,7 @@ body {
 	display: block;
 }
 .carousel-control-prev, .carousel-control-next {
-	color: white;
+	color: black;
 }
 .top-header {
 	background-color: white;
